unpackaged/main/default/objects/Account/fields/Account_Alias__c.field-meta.xml
<CustomField>
    <fullName>Account_Alias__c</fullName>
    <inlineHelpText>Enter an alias, or nickname.  This field is used to populate the title of an opportunity.</inlineHelpText>
    <label>Account Alias</label>
    <length>30</length>
    <type>Text</type>
</CustomField>