unpackaged/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <inlineHelpText>Distributors are marked historic once they no longer sell our products. Their record is maintained in SF to protect historic data</inlineHelpText>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Status</valueSetName>
    </valueSet>
</CustomField>