unpackaged/main/default/objects/Account/fields/Account_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Account_Strategy__c</fullName>
    <inlineHelpText>Account Owner&#39;s plan for increasing the annual business.</inlineHelpText>
    <label>Account Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>