unpackaged/main/default/objects/Account/fields/Allogran_R__c.field-meta.xml
<CustomField>
    <fullName>Allogran_R__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allogran-R</label>
    <type>Checkbox</type>
</CustomField>