unpackaged/main/default/objects/Account/fields/Amount_of_Surgeon_in_hospital_record__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Surgeon_in_hospital_record__c</fullName>
    <label>Amount of &quot;Surgeon in hospital record&quot;</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>