unpackaged/main/default/objects/Account/fields/Authorised_Products__c.field-meta.xml
<CustomField>
    <fullName>Authorised_Products__c</fullName>
    <label>Authorised Products</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>