unpackaged/main/default/objects/Account/fields/Bilok__c.field-meta.xml
<CustomField>
    <fullName>Bilok__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bilok</label>
    <type>Checkbox</type>
</CustomField>