unpackaged/main/default/objects/Account/fields/Biocomposites_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Biocomposites_Consultant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Biocomposites Consultant</label>
    <type>Checkbox</type>
</CustomField>