unpackaged/main/default/objects/Account/fields/Biosteon_Intraline__c.field-meta.xml
<CustomField>
    <fullName>Biosteon_Intraline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Biosteon Intraline</label>
    <type>Checkbox</type>
</CustomField>