unpackaged/main/default/objects/Account/fields/Biosteon_Screws__c.field-meta.xml
<CustomField>
    <fullName>Biosteon_Screws__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Biosteon Screws</label>
    <type>Checkbox</type>
</CustomField>