unpackaged/main/default/objects/Account/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <label>Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DHL</fullName>
            </value>
            <value>
                <fullName>FedEX Cust Account</fullName>
            </value>
            <value>
                <fullName>FedEx FOC</fullName>
            </value>
            <value>
                <fullName>FedEx Recharge</fullName>
            </value>
            <value>
                <fullName>Hellmann Logistics</fullName>
            </value>
            <value>
                <fullName>NNR Global Logistics</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>SDV Logistics</fullName>
            </value>
            <value>
                <fullName>Skynet</fullName>
            </value>
            <value>
                <fullName>TNT</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>