unpackaged/main/default/objects/Account/fields/Carrier_acc_no__c.field-meta.xml
<CustomField>
    <fullName>Carrier_acc_no__c</fullName>
    <label>Carrier Account No.</label>
    <length>40</length>
    <type>Text</type>
</CustomField>