unpackaged/main/default/objects/Account/fields/Consignment__c.field-meta.xml
<CustomField>
    <fullName>Consignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consignment</label>
    <type>Checkbox</type>
</CustomField>