unpackaged/main/default/objects/Account/fields/Consultant_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Expiry__c</fullName>
    <label>Consultant Expiry</label>
    <type>Date</type>
</CustomField>