unpackaged/main/default/objects/Account/fields/Contract_1_Valid_Until__c.field-meta.xml
<CustomField>
    <fullName>Contract_1_Valid_Until__c</fullName>
    <label>Contract 1 Valid Until</label>
    <type>Date</type>
</CustomField>