unpackaged/main/default/objects/Account/fields/Contract_2_Products__c.field-meta.xml
<CustomField>
    <fullName>Contract_2_Products__c</fullName>
    <label>Contract 2 Products</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>geneX</fullName>
            </value>
            <value>
                <fullName>STIMULAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>