unpackaged/main/default/objects/Account/fields/Contract_2_Quota__c.field-meta.xml
<CustomField>
    <fullName>Contract_2_Quota__c</fullName>
    <label>Contract 2 Quota</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>