unpackaged/main/default/objects/Account/fields/Contract_2_Quota_Period__c.field-meta.xml
<CustomField>
    <fullName>Contract_2_Quota_Period__c</fullName>
    <label>Contract 2 Quota Period</label>
    <length>20</length>
    <type>Text</type>
</CustomField>