unpackaged/main/default/objects/Account/fields/Contract_2_Valid_Until__c.field-meta.xml
<CustomField>
    <fullName>Contract_2_Valid_Until__c</fullName>
    <label>Contract 2 Valid Until</label>
    <type>Date</type>
</CustomField>