unpackaged/main/default/objects/Account/fields/Contract_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expiry__c</fullName>
    <label>Contracted Price Agreement Expiry</label>
    <type>Date</type>
</CustomField>