unpackaged/main/default/objects/Account/fields/Contract_Price__c.field-meta.xml
<CustomField>
    <fullName>Contract_Price__c</fullName>
    <label>Contracted Price Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes (Auto-renewal)</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>