unpackaged/main/default/objects/Account/fields/Copy_Main_Address_to_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Copy_Main_Address_to_Shipping_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Copy Main Address to Shipping Address</description>
    <label>Copy Main Address to Shipping Address</label>
    <type>Checkbox</type>
</CustomField>