unpackaged/main/default/objects/Account/fields/Credentialing_Platform__c.field-meta.xml
<CustomField>
    <fullName>Credentialing_Platform__c</fullName>
    <label>Credentialing Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parallon</fullName>
            </value>
            <value>
                <fullName>Proprietary</fullName>
            </value>
            <value>
                <fullName>Reptrax/Secure</fullName>
            </value>
            <value>
                <fullName>Symplr</fullName>
            </value>
            <value>
                <fullName>Vendormate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>