unpackaged/main/default/objects/Account/fields/Credit_Status_Comment__c.field-meta.xml
<CustomField>
    <fullName>Credit_Status_Comment__c</fullName>
    <label>Credit Status Comment</label>
    <type>TextArea</type>
</CustomField>