unpackaged/main/default/objects/Account/fields/Current_RSM_Filter__c.field-meta.xml
<CustomField>
    <fullName>Current_RSM_Filter__c</fullName>
    <formula>$User.Id =  $UserRole.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current RSM Filter</label>
    <type>Checkbox</type>
</CustomField>