unpackaged/main/default/objects/Account/fields/Customer_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Customer_Address_City__c</fullName>
    <label>Billing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>