unpackaged/main/default/objects/Account/fields/Customer_Address_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Customer_Address_Postcode__c</fullName>
    <label>Billing Zip/Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>