unpackaged/main/default/objects/Account/fields/Customer_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Customer_Address_Street__c</fullName>
    <label>Billing Street</label>
    <type>TextArea</type>
</CustomField>