unpackaged/main/default/objects/Account/fields/Distributor_Description__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Description__c</fullName>
    <inlineHelpText>This field should include a description of their territory.</inlineHelpText>
    <label>Distributor Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>