unpackaged/main/default/objects/Account/fields/Distributor_Rep__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor Rep</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Distributor__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Hospitals of this Rep</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>