unpackaged/main/default/objects/Account/fields/Distributor_Type__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Type__c</fullName>
    <inlineHelpText>Based on contract with distributor</inlineHelpText>
    <label>Distributor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Distributor_Type</valueSetName>
    </valueSet>
</CustomField>