unpackaged/main/default/objects/Account/fields/Doubleplay__c.field-meta.xml
<CustomField>
    <fullName>Doubleplay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Doubleplay</label>
    <type>Checkbox</type>
</CustomField>