unpackaged/main/default/objects/Account/fields/Email_Address_For_Order_Form__c.field-meta.xml
<CustomField>
    <fullName>Email_Address_For_Order_Form__c</fullName>
    <label>Email address for app order form</label>
    <type>Email</type>
</CustomField>