unpackaged/main/default/objects/Account/fields/Fellow__c.field-meta.xml
<CustomField>
    <fullName>Fellow__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to designate the account as a &#39;Fellow&#39;.</inlineHelpText>
    <label>Fellow</label>
    <type>Checkbox</type>
</CustomField>