unpackaged/main/default/objects/Account/fields/Fellowship_Ends__c.field-meta.xml
<CustomField>
    <fullName>Fellowship_Ends__c</fullName>
    <description>Planned_End_Date__c</description>
    <inlineHelpText>The date that this Surgeon&#39;s Fellowship ends at this Hospital.</inlineHelpText>
    <label>Fellowship Ends</label>
    <type>Date</type>
</CustomField>