unpackaged/main/default/objects/Account/fields/Fellowship_Leader_STIMULAN_Influencer__c.field-meta.xml
<CustomField>
    <fullName>Fellowship_Leader_STIMULAN_Influencer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fellowship Leader / STIMULAN Influencer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <valueField>$Source.RecordTypeId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Fellowship Leader / STIMULAN Influencer)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>