unpackaged/main/default/objects/Account/fields/FMS__c.field-meta.xml
<CustomField>
    <fullName>FMS__c</fullName>
    <label>FMS</label>
    <length>40</length>
    <type>Text</type>
</CustomField>