unpackaged/main/default/objects/Account/fields/Genex__c.field-meta.xml
<CustomField>
    <fullName>Genex__c</fullName>
    <defaultValue>false</defaultValue>
    <label>geneX</label>
    <type>Checkbox</type>
</CustomField>