unpackaged/main/default/objects/Account/fields/geneX_ds__c.field-meta.xml
<CustomField>
    <fullName>geneX_ds__c</fullName>
    <defaultValue>false</defaultValue>
    <label>geneX ds</label>
    <type>Checkbox</type>
</CustomField>