unpackaged/main/default/objects/Account/fields/geneX_putty__c.field-meta.xml
<CustomField>
    <fullName>geneX_putty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>geneX putty</label>
    <type>Checkbox</type>
</CustomField>