unpackaged/main/default/objects/Account/fields/Historic_Since__c.field-meta.xml
<CustomField>
    <fullName>Historic_Since__c</fullName>
    <label>Historic Since</label>
    <type>Date</type>
</CustomField>