unpackaged/main/default/objects/Account/fields/Hospital_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Distributor__c</fullName>
    <description>Holds distributor associated with Hospital.</description>
    <label>Hospital_Distributor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>