unpackaged/main/default/objects/Account/fields/Incentive_Type__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Type__c</fullName>
    <label>Incentive Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Top 5 Account</fullName>
            </value>
            <value>
                <fullName>Patch Account</fullName>
            </value>
            <value>
                <fullName>Key Account</fullName>
                <isActive>false</isActive>
                <label>Key Account</label>
            </value>
            <value>
                <fullName>Protect Account</fullName>
                <isActive>false</isActive>
                <label>Protect Account</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>