unpackaged/main/default/objects/Account/fields/Knee_Centre__c.field-meta.xml
<CustomField>
    <fullName>Knee_Centre__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Knee Centre</label>
    <type>Checkbox</type>
</CustomField>