unpackaged/main/default/objects/Account/fields/New_CE_Focus__c.field-meta.xml
<CustomField>
    <fullName>New_CE_Focus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New CE Focus</label>
    <type>Checkbox</type>
</CustomField>