unpackaged/main/default/objects/Account/fields/NHS_Trust_Code__c.field-meta.xml
<CustomField>
    <fullName>NHS_Trust_Code__c</fullName>
    <externalId>true</externalId>
    <label>NHS Trust Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>