unpackaged/main/default/objects/Account/fields/NPI_GMC_Number__c.field-meta.xml
<CustomField>
    <fullName>NPI_GMC_Number__c</fullName>
    <externalId>true</externalId>
    <label>NPI / GMC Number</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>