unpackaged/main/default/objects/Account/fields/Number_of_hospital_records__c.field-meta.xml
<CustomField>
    <fullName>Number_of_hospital_records__c</fullName>
    <label>Number of hospital records</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>