unpackaged/main/default/objects/Account/fields/Order_Form_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Email_Address__c</fullName>
    <inlineHelpText>This is the email address that order forms originated from the Hub app will be sent to.</inlineHelpText>
    <label>Order Form Email Address</label>
    <type>Email</type>
</CustomField>