unpackaged/main/default/objects/Account/fields/Other_distribution_Agreements__c.field-meta.xml
<CustomField>
    <fullName>Other_distribution_Agreements__c</fullName>
    <inlineHelpText>List the other manufacturers the distributor supports</inlineHelpText>
    <label>Other Distribution Agreements</label>
    <type>TextArea</type>
</CustomField>