unpackaged/main/default/objects/Account/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Payment in advance</fullName>
            </value>
            <value>
                <fullName>30 days from date of invoice</fullName>
            </value>
            <value>
                <fullName>45 days from date of invoice</fullName>
            </value>
            <value>
                <fullName>60 days from date of invoice</fullName>
            </value>
            <value>
                <fullName>90 days from date of invoice</fullName>
            </value>
            <value>
                <fullName>150 days from date of invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>