unpackaged/main/default/objects/Account/fields/Predicted_Annual_Growth__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Annual_Growth__c</fullName>
    <label>Target Annual Growth 2015</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>