unpackaged/main/default/objects/Account/fields/Qualifications__c.field-meta.xml
<CustomField>
    <fullName>Qualifications__c</fullName>
    <inlineHelpText>Show qualifications as they should appear on correspondence</inlineHelpText>
    <label>Qualifications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>