unpackaged/main/default/objects/Account/fields/Quota_1__c.field-meta.xml
<CustomField>
    <fullName>Quota_1__c</fullName>
    <label>Contract 1 Quota</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>