unpackaged/main/default/objects/Account/fields/Quota_1_period__c.field-meta.xml
<CustomField>
    <fullName>Quota_1_period__c</fullName>
    <label>Contract 1 Quota Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>