unpackaged/main/default/objects/Account/fields/Receiving_RSM__c.field-meta.xml
<CustomField>
    <fullName>Receiving_RSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is mandatory if &#39;Post Fellowship target Hospital&#39; is filled in.
Forced by validation rule &#39;Recieving_RSM_Mandatory&#39;</description>
    <inlineHelpText>Only &#39;Regional Manager&#39; names will return here.
NOTE: This field becomes mandatory if ANY text is entered into the &#39;Post Fellowship Target Hospital&#39;.</inlineHelpText>
    <label>Receiving RSM</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>startsWith</operation>
            <value>RM</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>