unpackaged/main/default/objects/Account/fields/Recieving_RSM_Filter__c.field-meta.xml
<CustomField>
    <fullName>Recieving_RSM_Filter__c</fullName>
    <formula>$User.Id =   Receiving_RSM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recieving RSM Filter</label>
    <type>Checkbox</type>
</CustomField>