unpackaged/main/default/objects/Account/fields/Record_ERP__c.field-meta.xml
<CustomField>
    <fullName>Record_ERP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Existing customer account in EPICOR / Fishbowl. The account may be active or purely historic.</inlineHelpText>
    <label>Account record in EPICOR / Fishbowl</label>
    <type>Checkbox</type>
</CustomField>